gcc/testsuite/rust/rustc/ui/traits/trait-as-struct-constructor.rs
trait TraitNotAStruct {}

fn main() {
    TraitNotAStruct{ value: 0 };
// { dg-error ".E0574." "" { target *-*-* } .-1 }
}

